@@ -1,46 +1,41 @@
+= Welcome to Sqoop
 
-= Welcome to Sqoop!
+Apache Sqoop is a tool designed for efficiently transferring bulk data between
+Apache Hadoop and structured datastores such as relational databases. You can use
+Sqoop to import data from external structured datastores into Hadoop Distributed
+File System or related systems like Hive and HBase. Conversely, Sqoop can be used
+to extract data from Hadoop and export it to external structured datastores such
+as relational databases and enterprise data warehouses.
 
-This is the Sqoop (SQL-to-Hadoop) tool. Sqoop allows easy imports and
-exports of data sets between databases and HDFS.
+== Documentation
 
+Sqoop ships with documentation, please check module "docs" for additional materials.
 
-== More Documentation
+More documentation is available online on Sqoop home page:
 
-Sqoop ships with additional documentation: a user guide and a manual page.
-
-Asciidoc sources for both of these are in +src/docs/+. Run +ant docs+ to build
-the documentation. It will be created in +build/docs/+.
-
-If you got Sqoop in release form, documentation will already be built and
-available in the +docs/+ directory.
-
+http://sqoop.apache.org/
 
 == Compiling Sqoop
 
-Compiling Sqoop requires the following tools:
+Sqoop uses the Maven build system, and it can be compiled and built running the
+following commands:
 
-* Apache ant (1.7.1)
-* Java JDK 1.6
+  mvn compile # Compile project
+  mvn package # Build source artifact
+  mvn package -Pbinary # Build binary artifact
 
-Additionally, building the documentation requires these tools:
+Sqoop is using Sphinx plugin to generate documentation that have higher memory
+requirements that might not fit into default maven configuration. You might need
+to increase maximal memory allowance to successfully execute package goal. This
+can done using following command:
 
-* asciidoc
-* make
-* python 2.5+
-* xmlto
-* tar
-* gzip
+  export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=512m"
 
-To compile Sqoop, run +ant package+. There will be a fully self-hosted build
-provided in the +build/sqoop-(version)/+ directory. 
+Sqoop currently supports multiple Hadoop distributions. In order to compile Sqoop
+against a specific Hadoop version, please specify the hadoop.profile property in
+Maven commands. For example:
 
-You can build just the jar by running +ant jar+.
+  mvn package -Pbinary -Dhadoop.profile=100
 
-See the COMPILING.txt document for for information.
-
-== This is also an Asciidoc file!
-
-* Try running +asciidoc README.txt+
-* For more information about asciidoc, see http://www.methods.co.nz/asciidoc/
-
+Please refer to the Sqoop documentation for a full list of supported Hadoop
+distributions and values of the hadoop.profile property.
